# mdal

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: push_to_PyPI.yml
src/mdal/statics/: normality.py  steel-dwass.py
src/mdal/time_series/: plot.py  stationarity.py
tests/: test_mdal.py
