[tool.poetry]
name = "mdal"
version = "0.1.0"
description = "mdal(My Data Analytics Library)"
authors = ["Yuya Nagai <ynny.opem@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
scipy = "^1.7.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
